Make % works..... But shift left has bug.

--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -29,5 +29,5 @@ run1_7_2:
 	./gcd_by_euclid
 
 bigIntTest:biginteger.cpp biginteger.h bigIntTest.cpp
-	g++ $(CPPFLAGS) -g3 -c biginteger.cpp bigIntTest.cpp
-	g++ $(CPPFLAGS) -g3 -o bigIntTest biginteger.o bigIntTest.o 
+	g++ -std=c++11 -Wall -g3 -c biginteger.cpp bigIntTest.cpp
+	g++ -std=c++11 -Wall -g3 -o bigIntTest biginteger.o bigIntTest.o 
