--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -1,4 +1,4 @@
 bigdata:bigdata.cpp database.h database.cpp
-	g++ --std=c++11 -Wall -O3 -o bigdata database.cpp bigdata.cpp 
+	g++ --std=c++11 -Wall -g3 -O3 -o bigdata database.cpp bigdata.cpp 
 test:test.cpp
 	g++ --std=c++11 -Wall -O3 -o test test.cpp
