--- a/HW4/Makefile
+++ b/HW4/Makefile
@@ -2,5 +2,5 @@ CPPFLAGS = -O2 -std=c++11 -Wall
 CPPFLAGS_DBG = -std=c++11 -Wall -g3 -D_DEBUG
 tree: tree.cpp tree_generator.hpp tree_generator.cpp
 	g++ $(CPPFLAGS) tree.cpp tree_generator.cpp -o tree
-debug: tree.cpp tree_generator.hpp tree_generator.cpp test_util.cpp test_util.hpp
-	g++ $(CPPFLAGS_DBG) tree.cpp tree_generator.cpp test_util.cpp -o tree
+forest: forest.cpp tree_generator.hpp tree_generator.cpp
+	g++ $(CPPFLAGS) forest.cpp tree_generator.cpp -o forest
